deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-vnc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu-vnc
  template:
    metadata:
      labels:
        app: ubuntu-vnc
    spec:
      containers:
      - name: ubuntu-vnc
        image: dorowu/ubuntu-desktop-lxde-vnc
        ports:
        - containerPort: 5900 # Port VNC
        - containerPort: 8080 # Port noVNC (web)
        securityContext: # Penting untuk OpenShift
          privileged: false # Sebaiknya false jika memungkinkan
          runAsUser: 1000 # User non-root
          capabilities:
            drop:
              - ALL
        resources: # Atur resource sesuai kebutuhan
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 1000m
            memory: 2Gi
