service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ubuntu-vnc-service
spec:
  selector:
    app: ubuntu-vnc
  ports:
  - protocol: TCP
    port: 80 # Port yang diekspos di luar
    targetPort: 8080 # Port container noVNC
