route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ubuntu-vnc-route
spec:
  to:
    kind: Service
    name: ubuntu-vnc-service
  port:
    targetPort: 80
